--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.645.0",
+    "@aws-sdk/client-sqs": "^3.645.0",
     "@aws-sdk/util-dynamodb": "^3.645.0",
     "esbuild": "^0.23.1",
     "googleapis": "^144.0.0"
