[ADD] microsoft graph

--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ GOOGLE_CLIENT_ID=96176875582-199bhgfjpff5m1o48ujtkm1he7i7fn25.apps.googleusercon
 GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URL=https://xx72jgzdi7.execute-api.us-east-1.amazonaws.com/dev/auth/google/callback
 GOOGLE_REDIRECT_URL2=http://localhost:3000/dev/auth/google/callback
+MICROSOFT_CLIENT_ID=3d3ca1d7-3291-47b3-a432-65fe81d0fa8a
+MICROSOFT_TENANT_ID=3d7eedf084-04d7-4546-b169-d88f15d052a1
+MICROSOFT_SECRET_ID_VALUE=caj8Q~OJppPXMQ~MUyJq2_zaCeZGg9B~uArqPbfp
+MICROSOFT_SECRET_ID=e89096b8-996b-4264-befc-d4bb45754323
+MICROSOFT_AUTHORITY=7eedf084-04d7-4546-b169-d88f15d052a1
+MICROSOFT_REDIRECT_URL=http://localhost:3000/dev/auth/google/callback
