--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.645.0",
+    "@aws-sdk/client-s3": "^3.651.1",
     "@aws-sdk/client-sqs": "^3.645.0",
     "@aws-sdk/util-dynamodb": "^3.645.0",
     "@azure/msal-node": "^2.13.1",
