--- a/serverless.yml
+++ b/serverless.yml
@@ -14,12 +14,12 @@ provider:
     GOOGLE_CLIENT_ID: ${env:GOOGLE_CLIENT_ID}
     GOOGLE_CLIENT_SECRET: ${env:GOOGLE_CLIENT_SECRET}
     GOOGLE_REDIRECT_URL: ${env:GOOGLE_REDIRECT_URL}
-    EMAIL_TABLE_NAME: email-providers
-    SQS_QUEUE_NAME: email-queue-${self:provider.stage}
-    S3_BUCKET_NAME: email-providers-${self:provider.stage}
+    MAIL_TABLE_NAME: mail-table-${self:provider.stage}
+    MAIL_QUEUE_NAME: mail-queue-${self:provider.stage}
+    MAIL_BUCKET_NAME: mail-bucket-${self:provider.stage}
 
 custom:
-  sqsArn: !Sub arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:email-queue-${self:provider.stage}
+  api-url: 'hola'
 
 plugins:
   - serverless-dotenv-plugin
@@ -27,250 +27,13 @@ plugins:
   - serverless-offline
 
 functions:
-  # --------------------GOOGLE ----------------------------------------------------
-  authUrlGoogle:
-    handler: dist/handlers/google/authUrlGoogleEmailHandler.handler
-    events:
-      - http:
-          path: auth/google
-          method: get
-    package:
-      patterns:
-        - dist/handlers/google/authUrlGoogleEmailHandler.js
+  - ${file(infrastructure/functions/mail/google-mail.yml)}
+  - ${file(infrastructure/functions/mail/graph-mail.yml)}
 
-  callbackGoogle:
-    handler: dist/handlers/google/callbackCodeGoogleHandler.handler
-    iamRoleStatements:
-      - Effect: 'Allow'
-        Action:
-          - dynamodb:PutItem
-        Resource: !ImportValue
-    events:
-      - http:
-          path: auth/google/callback
-          method: get
-    package:
-      patterns:
-        - dist/handlers/google/callbackCodeGoogleHandler.js
-
-  listEmailsGoogle:
-    handler: dist/handlers/google/listEmailGoogleHandler.handler
-    iamRoleStatements:
-      - Effect: 'Allow'
-        Action:
-          - dynamodb:GetItem
-          - dynamodb:UpdateItem
-          - dynamodb:BatchGetItem
-          - dynamodb:BatchWriteItem
-        Resource: !GetAtt EmailTable.Arn
-      - Effect: 'Allow'
-        Action:
-          - sqs:SendMessage
-          - sqs:ReceiveMessage
-          - sqs:DeleteMessage
-          - sqs:GetQueueAttributes
-          - sqs:GetQueueUrl
-        Resource: !GetAtt EmailQueue.Arn
-    events:
-      - http:
-          path: auth/google/list-mails
-          method: post
-    package:
-      patterns:
-        - dist/handlers/google/listEmailGoogleHandler.js
-
-  # ------------------------Microsoft -----------------------------------
-
-  authUrlMicrosoft:
-    handler: dist/handlers/microsoft/authUrlMicrosodtEmailHandler.handler
-    events:
-      - http:
-          path: auth/microsoft
-          method: get
-    package:
-      patterns:
-        - dist/handlers/microsoft/authUrlMicrosodtEmailHandler.js
-
-  callbackMicrosoft:
-    handler: dist/handlers/microsoft/callbackCodeMicrosoftHandler.handler
-    iamRoleStatements:
-      - Effect: 'Allow'
-        Action:
-          - dynamodb:PutItem
-        Resource:
-          - !Sub arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/email-providers
-    events:
-      - http:
-          path: auth/microsoft/callback
-          method: get
-    package:
-      patterns:
-        - dist/handlers/microsoft/callbackCodeMicrosoftHandler.js
-
-  sendIdEmailQueueMicrosof:
-    handler: dist/handlers/microsoft/sendIdEmailQueueMicrosoftHandler.handler
-    iamRoleStatements:
-      - Effect: 'Allow'
-        Action:
-          - dynamodb:GetItem
-          - dynamodb:UpdateItem
-          - dynamodb:PutItem
-        Resource:
-          - !Sub arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/email-providers
-      - Effect: 'Allow'
-        Action:
-          - sqs:SendMessage
-          - sqs:ReceiveMessage
-          - sqs:DeleteMessage
-          - sqs:GetQueueAttributes
-          - sqs:GetQueueUrl
-        Resource:
-          - !Sub arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:email-queue-${self:provider.stage}
-    events:
-      - http:
-          path: auth/microsoft/sincronice
-          method: post
-    package:
-      patterns:
-        - dist/handlers/microsoft/sendIdEmailQueueMicrosoftHandler.js
-
-  syncroniceEmailsMicrosoft:
-    handler: dist/handlers/microsoft/syncroniceEmailsHandler.handler
-    iamRoleStatements:
-      - Effect: 'Allow'
-        Action:
-          - dynamodb:GetItem
-          - dynamodb:PutItem
-        Resource:
-          - !Sub arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/email-providers
-      - Effect: 'Allow'
-        Action:
-          - s3:PutObject
-          - s3:GetObject
-        Resource: !Sub 'arn:aws:s3:::${self:provider.environment.S3_BUCKET_NAME}/*'
-      - Effect: 'Allow'
-        Action:
-          - sqs:SendMessage
-          - sqs:ReceiveMessage
-          - sqs:DeleteMessage
-          - sqs:GetQueueAttributes
-          - sqs:GetQueueUrl
-        Resource:
-          - !Sub arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:email-queue-${self:provider.stage}
-    events:
-      - sqs:
-          arn: !GetAtt EmailQueue.Arn
-          batchSize: 10
-    package:
-      patterns:
-        - dist/handlers/microsoft/syncroniceEmailsHandler.js
-
-  # ----------------------------------------Inbox--------------------------------------------
-
-  listAllEmails:
-    handler: dist/handlers/ListAllEmailHandler.handler
-    iamRoleStatements:
-      - Effect: 'Allow'
-        Action:
-          - dynamodb:GetItem
-          - dynamodb:Query
-        Resource: !GetAtt EmailTable.Arn
-    events:
-      - http:
-          path: list-all-emails
-          method: post
-    package:
-      patterns:
-        - dist/handlers/ListAllEmailHandler.js
-
-# ------------------------------Resources--------------------------------------------
 resources:
-  Resources:
-    EmailTable:
-      Type: 'AWS::DynamoDB::Table'
-      Properties:
-        TableName: ${self:provider.environment.EMAIL_TABLE_NAME}
-        AttributeDefinitions:
-          - AttributeName: PK
-            AttributeType: S
-          - AttributeName: SK
-            AttributeType: S
-          - AttributeName: GSI1PK
-            AttributeType: S
-          - AttributeName: GSI1SK
-            AttributeType: S
-          - AttributeName: GSI2PK
-            AttributeType: S
-          - AttributeName: GSI2SK
-            AttributeType: S
-          - AttributeName: GSI3PK
-            AttributeType: S
-          - AttributeName: GSI3SK
-            AttributeType: S
-        KeySchema:
-          - AttributeName: PK
-            KeyType: HASH # PK debe ser la clave HASH
-          - AttributeName: SK
-            KeyType: RANGE # SK debe ser la clave RANGE
-        TimeToLiveSpecification:
-          Enabled: true
-          AttributeName: 'deleteTime'
-        GlobalSecondaryIndexes:
-          - IndexName: GSI1
-            KeySchema:
-              - AttributeName: GSI1PK
-                KeyType: HASH
-              - AttributeName: GSI1SK
-                KeyType: RANGE
-            Projection:
-              ProjectionType: ALL
-          - IndexName: GSI2
-            KeySchema:
-              - AttributeName: GSI2PK
-                KeyType: HASH
-              - AttributeName: GSI2SK
-                KeyType: RANGE
-            Projection:
-              ProjectionType: ALL
-          - IndexName: GSI3
-            KeySchema:
-              - AttributeName: GSI3PK
-                KeyType: HASH
-              - AttributeName: GSI3SK
-                KeyType: RANGE
-            Projection:
-              ProjectionType: ALL
-        BillingMode: PAY_PER_REQUEST
-
-    EmailQueue:
-      Type: AWS::SQS::Queue
-      Properties:
-        QueueName: ${self:provider.environment.SQS_QUEUE_NAME}
-        VisibilityTimeout: 60
-        MessageRetentionPeriod: 86400
-
-    EmailS3:
-      Type: AWS::S3::Bucket
-      Properties:
-        BucketName: ${self:provider.environment.S3_BUCKET_NAME}
-        PublicAccessBlockConfiguration:
-          BlockPublicAcls: false
-          BlockPublicPolicy: false
-          IgnorePublicAcls: false
-          RestrictPublicBuckets: false
-
-    PublicBucketPolicy:
-      Type: AWS::S3::BucketPolicy
-      Properties:
-        Bucket: !Ref EmailS3
-        PolicyDocument:
-          Version: '2012-10-17'
-          Statement:
-            - Sid: PublicReadGetObject
-              Effect: Allow
-              Principal: '*'
-              Action: 's3:GetObject'
-              Resource: !Sub 'arn:aws:s3:::${EmailS3}/*'
+  - ${file(infrastructure/resources/buckets.yml)}
+  - ${file(infrastructure/resources/queues.yml)}
+  - ${file(infrastructure/resources/tables.yml)}
 
 package:
   individually: true
